--- a/HospitalGame/Web.config
+++ b/HospitalGame/Web.config
@@ -63,8 +63,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ContextoHospitalGame" connectionString="metadata=res://*/Models.HospitalGame.csdl|res://*/Models.HospitalGame.ssdl|res://*/Models.HospitalGame.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-64C2FJI;initial catalog=HOSPITALGAME;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="ContextoHospitalGame" connectionString="metadata=res://*/Models.ContextoHospitalGame.csdl|res://*/Models.ContextoHospitalGame.ssdl|res://*/Models.ContextoHospitalGame.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=T06W25\SQLTAJAMAR;initial catalog=HOSPITALGAME;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
