--- a/HospitalGame/HospitalGame.csproj
+++ b/HospitalGame/HospitalGame.csproj
@@ -191,8 +191,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="js\arrastrar.js" />
+    <Content Include="js\ClickBoton.js" />
     <Content Include="js\crearusuario2.js" />
     <Content Include="js\crearusuarios.js" />
+    <Content Include="js\CrearUsusarios2.js" />
+    <Content Include="js\CuentaAtras.js" />
+    <Content Include="js\EnviarAsincrono.js" />
+    <Content Include="js\Random.js" />
     <Content Include="Models\ContextoHospitalGame.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ContextoHospitalGame.edmx</DependentUpon>
