--- a/HospitalGame/HospitalGame.csproj
+++ b/HospitalGame/HospitalGame.csproj
@@ -198,6 +198,7 @@
     <Content Include="js\CrearUsusarios2.js" />
     <Content Include="js\CuentaAtras.js" />
     <Content Include="js\EnviarAsincrono.js" />
+    <Content Include="js\GeneradorNombresDrop.js" />
     <Content Include="js\Random.js" />
     <Content Include="Models\ContextoHospitalGame.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
